last_repo update

--- a/notebooks/02_model_training.ipynb
+++ b/notebooks/02_model_training.ipynb
@@ -59,7 +59,103 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Import libraries\n",
+    "from datasets import load_dataset\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "from transformers import BertTokenizer, BertForSequenceClassification, Trainer, TrainingArguments, EarlyStoppingCallback\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+    "\n",
+    "# Load dataset\n",
+    "dataset = load_dataset(\"zefang-liu/phishing-email-dataset\")\n",
+    "df = dataset['train'].to_pandas()\n",
+    "\n",
+    "# Preprocess labels\n",
+    "df['label'] = df['Email Type'].map({'Safe Email': 0, 'Phishing Email': 1})\n",
+    "df = df[['Email Text', 'label']].dropna()\n",
+    "\n",
+    "# Split dataset\n",
+    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=42, stratify=df['label'])\n",
+    "train_df.to_csv('data/processed/train.csv', index=False)\n",
+    "test_df.to_csv('data/processed/test.csv', index=False)\n",
+    "\n",
+    "# Tokenization\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples['Email Text'], padding='max_length', truncation=True, max_length=512)\n",
+    "\n",
+    "# Convert to Dataset\n",
+    "from datasets import Dataset\n",
+    "train_dataset = Dataset.from_pandas(train_df)\n",
+    "test_dataset = Dataset.from_pandas(test_df)\n",
+    "\n",
+    "# Tokenize\n",
+    "tokenized_train = train_dataset.map(tokenize_function, batched=True)\n",
+    "tokenized_test = test_dataset.map(tokenize_function, batched=True)\n",
+    "\n",
+    "# Rename 'label' to 'labels' for Trainer\n",
+    "tokenized_train = tokenized_train.rename_column('label', 'labels')\n",
+    "tokenized_test = tokenized_test.rename_column('label', 'labels')\n",
+    "tokenized_train.set_format('torch', columns=['input_ids', 'attention_mask', 'labels'])\n",
+    "tokenized_test.set_format('torch', columns=['input_ids', 'attention_mask', 'labels'])\n",
+    "\n",
+    "# Define metrics\n",
+    "def compute_metrics(p):\n",
+    "    preds = np.argmax(p.predictions, axis=1)\n",
+    "    precision, recall, f1, _ = precision_recall_fscore_support(p.label_ids, preds, average='binary')\n",
+    "    acc = accuracy_score(p.label_ids, preds)\n",
+    "    return {'accuracy': acc, 'f1': f1, 'precision': precision, 'recall': recall}\n",
+    "\n",
+    "# Training\n",
+    "from transformers import BertConfig\n",
+    "config = BertConfig.from_pretrained('bert-base-uncased', hidden_dropout_prob=0.3, attention_probs_dropout_prob=0.3)\n",
+    "model = BertForSequenceClassification.from_pretrained('bert-base-uncased', config=config, num_labels=2)\n",
+    "\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir='/content/results',\n",
+    "    num_train_epochs=5,\n",
+    "    per_device_train_batch_size=8,\n",
+    "    per_device_eval_batch_size=8,\n",
+    "    gradient_accumulation_steps=4,\n",
+    "    eval_strategy='steps',\n",
+    "    eval_steps=500,\n",
+    "    save_strategy='steps',\n",
+    "    save_steps=500,\n",
+    "    weight_decay=0.05,\n",
+    "    learning_rate=2e-5,\n",
+    "    logging_dir='/content/logs',\n",
+    "    logging_steps=50,\n",
+    "    fp16=True,\n",
+    "    load_best_model_at_end=True,\n",
+    "    metric_for_best_model='f1',\n",
+    "    greater_is_better=True,\n",
+    "    report_to='none'\n",
+    ")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=tokenized_train,\n",
+    "    eval_dataset=tokenized_test,\n",
+    "    compute_metrics=compute_metrics,\n",
+    "    callbacks=[EarlyStoppingCallback(early_stopping_patience=2)]\n",
+    ")\n",
+    "\n",
+    "trainer.train()\n",
+    "\n",
+    "# Save model\n",
+    "model.save_pretrained('models/bert_model')\n",
+    "tokenizer.save_pretrained('models/bert_model')\n",
+    "\n",
+    "# Evaluate\n",
+    "eval_results = trainer.evaluate()\n",
+    "print(eval_results)\n",
+    "with open('results/metrics.txt', 'w') as f:\n",
+    "    f.write(str(eval_results))"
+   ]
   }
  ],
  "metadata": {
